add form + moving backgound + text slide

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,30 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default opacity">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="" class="navbar-brand">USD Predicter</a>
+            <a routerLink="" class="navbar-brand" >USD Predicter</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="/predict">Predict</a></li>
-                <li routerLinkActive="active"><a routerLink="/shopping-list">Shoping List</a></li>
+                <li routerLinkActive="active">
+                    <a routerLink="/predict">Predict</a>
+                </li>
             </ul>
+
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown>
+                <li>
+                    <a > 
+                        <div class="hwrap"><div class="hmove">
+                            <div class="hitem"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ usdToPlnRatio }}</div>
+                          </div></div>
+                    </a>
+                </li>
+                <!-- <li class="dropdown" appDropdown>
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer;" >Save Data</a></li>
                         <li><a style="cursor: pointer;" >Fetch Data</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
