--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h1>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
+<div appMoveBackground class="bg">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/US_one_dollar_bill%2C_reverse%2C_series_2009.jpg/800px-US_one_dollar_bill%2C_reverse%2C_series_2009.jpg" alt="">
+</div>
+<!-- <div appMoveBackground class="background-dollar"></div> -->
